Fixed minor bug with header not aligning properly.

--- a/app/ui/global.scss
+++ b/app/ui/global.scss
@@ -107,7 +107,7 @@ h3 {
 .header {
     &__container {
         flex-direction: column;
-        justify-items: center;
+        text-align: center;
 
         @include respond-laptop-standard {
             margin-top: 3rem;
